add lemmatizer models, add tests